# fmindex-collection

./: .codecov.yml  404.html  CMakeLists.txt  README.md  build.sh  cpm.dependencies  cpm.dependencies.license  cpmpack.json  fmindex_collection-config.cmake  index.html  locate.html  mkdocs.yml  search.html
src/fmindex-collection/: BiFMIndex.h  BiFMIndex32.h  BiFMIndexCursor.h  BiFMIndex_32.h  BitStack.h  Bitvector.h  BitvectorCompact.h  CMakeLists.txt  CSA.h  CSA32.h  CSA_32.h  CSA_SAS.h  DenseCSA.h  DenseMultiVector.h  DenseVector.h  FMIndex.h  FMIndexCursor.h  FixedSuccinctVector.h  FixedSuccinctVector2.h  RBiFMIndex.h  RBiFMIndexCursor.h  ReverseFMIndex.h  ReverseFMIndexCursor.h  VariableFMIndex.h  VectorBool.h  bitset_popcount.h  builtins.h  cereal_tag.h  concepts.h  fmindex-collection.h  locate.h  ternarylogic.h  utils.h
src/fmindex-collection-stats/: CMakeLists.txt  main.cpp
src/fmindex-collection/bitvector/: Bitvector.h  Bitvector1L.h  Bitvector2L.h  CompactBitvector.h  CompactBitvector4Blocks.h  CompactDoubleL1L2_NBitvector.h  CompactPairedL1L2_NBitvector.h  DoubleL1L2_NBitvector.h  DoubleL1_128Bitvector.h  DoubleL1_NBitvector.h  InterleavedDoubleL1L2_NBitvector.h  InterleavedPairedL0L1_NBitvector.h  InterleavedPairedL1L2_NBitvector.h  InvertedBitvector.h  L0L1_NBitvector.h  L0_NBitvector.h  L1Bitvector.h  L1L2_NBitvector.h  L1_128Bitvector.h  L1_NBitvector.h  OptRBBitvector.h  OptSparseRBBitvector.h  PairedBitvector1L.h  PairedBitvector2L.h  PairedL0L1_NBitvector.h  PairedL0_NBitvector.h  PairedL1L2_NBitvector.h  PairedL1_NBitvector.h  PrunedBitvector.h  RBBitvector.h  SparseBLEBitvector.h  SparseDynRBBitvector.h  SparseRBBitvector.h  all.h  concepts.h
src/fmindex-collection/fmindex/: BiFMIndex.h  BiFMIndexCursor.h  BiFMIndexKStep.h  BiFMIndexKStepCursor.h  BiFMIndexNStep.h  BiFMIndexNStepCursor.h  BinaryMirroredBiFMIndex.h  BinaryMirroredBiFMIndexCursor.h  FMIndex.h  FMIndexCursor.h  KMerFMIndex.h  KMerFMIndexCursor.h  LinearFMIndex.h  LinearFMIndexCursor.h  MirroredBiFMIndex.h  MirroredBiFMIndexCursor.h  RBiFMIndex.h  RBiFMIndexCursor.h  ReverseFMIndex.h  ReverseFMIndexCursor.h  VariableFMIndex.h  all.h  diskStorage.h  fmindex.h  merge.h
src/fmindex-collection/occtable/: Bitvector.h  BitvectorPrefix.h  Compact.h  Compact2.h  Compact2Aligned.h  CompactAligned.h  CompactBitvector.h  CompactBitvectorPrefix.h  CompactPrefix.h  CompactWavelet.h  CompactWavelet32.h  CompactWaveletV2.h  DenseEPRV6.h  EPR.h  EPRV3.h  EPRV4.h  EPRV5.h  EPRV8.h  GenericInterleaved.h  GenericOccTable.h  InterleavedBitvector.h  InterleavedEPR.h  InterleavedEPRV2.h  InterleavedEPRV7.h  InterleavedEPRV7_32.h  InterleavedEPRV7b.h  InterleavedPrefix.h  InterleavedWavelet.h  InterleavedWavelet32.h  Naive.h  RLEBwt.h  Sdsl_wt_bldc.h  Sdsl_wt_epr.h  Wavelet.h  all.h  concepts.h  rRLEBwt.h  utils.h
src/fmindex-collection/oss/: nodeCount.h
src/fmindex-collection/rankvector/: CompactBitvector.h  DenseEPRV6.h  DoubleNEPRV8.h  EPRV3.h  EPRV4.h  EPRV5.h  InterleavedBitvector.h  InterleavedEPR.h  InterleavedEPRV2.h  InterleavedEPRV7.h  InterleavedWavelet.h  L1L2_NEPRV9.h  MultiBitvector.h  NEPRV8.h  Naive.h  PairedL1L2_NEPRV9.h  RBBwt.h  RBBwtV2.h  RLE.h  Sdsl_wt_bldc.h  Sdsl_wt_epr.h  Wavelet.h  Wavelet2.h  concepts.h  rankvector.h  utils.h
src/fmindex-collection/search/: Backtracking.h  BacktrackingWithBuffers.h  CachedSearchScheme.h  KMerSearch.h  Restore.h  SearchDoubleIndex.h  SearchDoubleIndex2.h  SearchHammingSM.h  SearchNg12.h  SearchNg14.h  SearchNg15.h  SearchNg16.h  SearchNg17.h  SearchNg17ea.h  SearchNg20.h  SearchNg21.h  SearchNg21V2.h  SearchNg21V3.h  SearchNg21V4.h  SearchNg21V5.h  SearchNg21V6.h  SearchNg21V7.h  SearchNg21ea.h  SearchNg22.h  SearchNg24.h  SearchNg24Sm.h  SearchNg25.h  SearchNg26.h  SearchNg27.h  SearchNg28.h  SearchNg28KStep.h  SearchNg28Options.h  SearchNoErrors.h  SearchNoErrorsFPGA.h  SearchOneError.h  SearchPseudo.h  SelectCursor.h  all.h  search.h
src/fmindex-collection/search_scheme/: Scheme.h  Search.h  all.h  expand.h  isComplete.h  isNonRedundant.h  isValid.h  nodeCount.h  weightedNodeCount.h
src/fmindex-collection/std/: chunk_view.hpp  enumerate_view.hpp  to.hpp
src/fmindex-collection/string/: AdapterStringKStep.h  CompactBitvector.h  DenseEPRV6.h  DoubleNEPRV8.h  EPRV3.h  EPRV4.h  EPRV5.h  FlattenBitvectors_L0L1.h  FlattenedBitvectors2L.h  FlattenedBitvectors_L0L1.h  InterleavedBitvector.h  InterleavedBitvectorPrefix.h  InterleavedEPR.h  InterleavedEPRV2.h  InterleavedEPRV7.h  InterleavedWavelet.h  L0L1_NEPRV9.h  L1L2_NEPRV9.h  MultiBitvector.h  MultiBitvectorPrefix.h  MultiaryWavelet.h  NEPRV8.h  Naive.h  PairedFlattenBitvectors_L0L1.h  PairedFlattenedBitvectors2L.h  PairedFlattenedBitvectors2LPartialSymb.h  PairedFlattenedBitvectors2L_b.h  PairedFlattenedBitvectors_L0L1.h  PairedL0L1_NEPRV9.h  PairedL1L2_NEPRV9.h  PartialPairedL0L1L2_NEPRV8.h  PartialPairedL1L2L3_NEPRV8.h  RBBwt.h  RBBwtV2.h  RunBlockEncoding.h  RunBlockEncodingV2.h  Sdsl_wt_bldc.h  Sdsl_wt_epr.h  Wavelet.h  Wavelet2.h  (+4 more)
src/fmindex-collection/utils/: utils.h
src/libsaispp/: CMakeLists.txt  common.hpp  sais.hpp  sais32.hpp  sais64.hpp
src/search_schemes/: CMakeLists.txt  Scheme.h  Search.h  SearchTree.h  expand.cpp  expand.h  expectedNodeCount.h  isComplete.cpp  isComplete.h  isValid.cpp  isValid.h  nodeCount.h  search_schemes.h  weightedNodeCount.h
src/test_fmindex-collection/: BenchSize.h  CMakeLists.txt  allBitVectors.h  allSymbolVectors.h  allTables.h  checkBiFMIndex.cpp  checkBitvector.cpp  checkDenseBiFMIndex.cpp  checkDenseMultiVector.cpp  checkDenseReverseFMIndex.cpp  checkDenseVector.cpp  checkFMIndex.cpp  checkFixedSuccinctVector.cpp  checkOccTables.cpp  checkReverseFMIndex.cpp  checkReverseIndexSearch.cpp  checkSearchBacktracking.cpp  checkSearchPseudo.cpp  checkSymbolVector.cpp  checkTernarylogic.cpp  main.cpp  miscellaneous.cpp  utils.cpp
src/test_header/: CMakeLists.txt  test.cpp.in
src/test_search_schemes/: CMakeLists.txt  checkGenerators.cpp  checkGeneratorsIsComplete.cpp  expand.cpp  isComplete.cpp  isValid.cpp  main.cpp  nodeCount.cpp  weightedNodeCount.cpp
(+448 files in other folders)
